--- a/l3kernel/l3deprecation.dtx
+++ b/l3kernel/l3deprecation.dtx
@@ -90,6 +90,10 @@
 %    \end{macrocode}
 %
 %    \begin{macrocode}
+%<*kernel>
+%    \end{macrocode}
+%
+%    \begin{macrocode}
 %<@@=deprecation>
 %    \end{macrocode}
 %
@@ -149,7 +153,7 @@
           } < {#1}
           {
             \bool_set_true:N \l_@@_grace_period_bool
-            \bool_if:NTF \l@expl@undo@recent@deprecations@bool
+            \bool_if:NTF \g__kernel_sys_undo_recent_deprecations_bool
           }
           { \use_ii:nn }
       }
@@ -242,9 +246,9 @@
       {
         \bool_if:nTF
           {
-            \cs_if_eq_p:NN #3 \cs_new_protected:Npn &&
+            \cs_if_eq_p:NN #3 \cs_gset_protected:Npn &&
             \__kernel_if_debug:TF
-              { \c_true_bool } { \l@expl@undo@recent@deprecations@bool }
+              { \c_true_bool } { \g__kernel_sys_undo_recent_deprecations_bool }
           }
           { \@@_warn_once:nnNnn {#1} {#2} #4 {#5} {#6} }
           { \@@_patch_aux:Nn #3 { #4 #5 {#6} } }
@@ -263,7 +267,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_warn_once:nnNnn #1#2#3#4#5
   {
-    \cs_new_protected:Npx #3
+    \cs_gset_protected:Npx #3
       {
         \__kernel_if_debug:TF
           {
@@ -292,7 +296,7 @@
 \cs_new_protected:Npn \@@_patch_aux:Nn #1#2
   {
     #1 #2
-    \cs_if_eq:NNTF #1 \cs_new_protected:Npn
+    \cs_if_eq:NNTF #1 \cs_gset_protected:Npn
       { \__kernel_deprecation_code:nn { } { \cs_set_protected:Npn #2 } }
       { \__kernel_deprecation_code:nn { } { \cs_set:Npn #2 } }
   }
@@ -311,7 +315,7 @@
       {
         \exp_not:N #4
         {
-          \cs_if_eq:NNTF #3 \cs_new_protected:Npn
+          \cs_if_eq:NNTF #3 \cs_gset_protected:Npn
             { \exp_not:N \__kernel_msg_error:nnnnnn }
             { \exp_not:N \__kernel_msg_expandable_error:nnnnnn }
             { kernel } { deprecated-command }
@@ -369,12 +373,12 @@
 \cs_new_protected:Npn \@@_old_protected:Nnn #1#2#3
   {
     \__kernel_patch_deprecation:nnNNpn {#3} {#2}
-    \cs_new_protected:Npn #1 { }
+    \cs_gset_protected:Npn #1 { }
   }
 \cs_new_protected:Npn \@@_old:Nnn #1#2#3
   {
     \__kernel_patch_deprecation:nnNNpn {#3} {#2}
-    \cs_new:Npn #1 { }
+    \cs_gset:Npn #1 { }
   }
 \@@_old:Nnn \c_job_name_tl
   { \c_sys_jobname_str } { 2017-01-01 }
@@ -515,6 +519,44 @@
 % \end{macro}
 % \end{macro}
 %
+% \subsection{Loading the patches}
+%
+% When loaded first, the patches are simply read here.
+%
+%    \begin{macrocode}
+\group_begin:
+\cs_set_protected:Npn \ProvidesExplFile
+  {
+    \char_set_catcode_space:n { `\  }
+    \ProvidesExplFileAux
+  }
+\cs_set_protected:Npn \ProvidesExplFileAux #1#2#3#4
+  {
+    \group_end:
+%<*initex>
+    \iow_log:x { File:~#1~#2~v#3~#4 }
+%</initex>
+%<*package>
+    \ProvidesFile {#1} [ #2~v#3~#4 ]
+%</package>
+  }
+
+\tex_input:D l3deprecation.def \scan_stop:
+%    \end{macrocode}
+%
+%    \begin{macrocode}
+%</kernel>
+%    \end{macrocode}
+%
+%    \begin{macrocode}
+%<*patches>
+%    \end{macrocode}
+%
+% Standard file identification.
+%    \begin{macrocode}
+\ProvidesExplFile{l3deprecation.def}{2019-04-06}{}{L3 Deprecated functions}
+%    \end{macrocode}
+%
 % \subsection{Deprecated \pkg{l3box} functions}
 %
 % \begin{macro}[deprecated = 2019-07-01]
@@ -522,16 +564,16 @@
 %    \begin{macrocode}
 \__kernel_patch_deprecation:nnNNpn
   { 2019-01-01 } { \box_resize_to_wd_and_ht_plus_dp:Nnn }
-\cs_new_protected:Npn \box_resize:Nnn
+\cs_gset_protected:Npn \box_resize:Nnn
   { \box_resize_to_wd_and_ht_plus_dp:Nnn }
 \__kernel_patch_deprecation:nnNNpn
   { 2019-01-01 } { \box_resize_to_wd_and_ht_plus_dp:cnn }
-\cs_new_protected:Npn \box_resize:cnn
+\cs_gset_protected:Npn \box_resize:cnn
   { \box_resize_to_wd_and_ht_plus_dp:cnn }
 \__kernel_patch_deprecation:nnNNpn { 2019-01-01 } { \box_use_drop:N }
-\cs_new_protected:Npn \box_use_clear:N { \box_use_drop:N }
+\cs_gset_protected:Npn \box_use_clear:N { \box_use_drop:N }
 \__kernel_patch_deprecation:nnNNpn { 2019-01-01 } { \box_use_drop:c }
-\cs_new_protected:Npn \box_use_clear:c { \box_use_drop:c }
+\cs_gset_protected:Npn \box_use_clear:c { \box_use_drop:c }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -547,10 +589,10 @@
 %   }
 %    \begin{macrocode}
 \__kernel_patch_deprecation:nnNNpn { 2021-01-01 } { \box_set_eq_drop:N }
-\cs_new_protected:Npn \box_set_eq_clear:NN #1#2
+\cs_gset_protected:Npn \box_set_eq_clear:NN #1#2
   { \tex_setbox:D #1 \tex_box:D #2 }
 \__kernel_patch_deprecation:nnNNpn { 2021-01-01 } { \box_gset_eq_drop:N }
-\cs_new_protected:Npn \box_gset_eq_clear:NN #1#2
+\cs_gset_protected:Npn \box_gset_eq_clear:NN #1#2
   { \tex_global:D \tex_setbox:D #1 \tex_box:D #2 }
 \cs_generate_variant:Nn \box_set_eq_clear:NN  { c , Nc , cc }
 \cs_generate_variant:Nn \box_gset_eq_clear:NN { c , Nc , cc }
@@ -561,7 +603,7 @@
 % \begin{macro}[deprecated = 2021-07-01]{\hbox_unpack_clear:N, \hbox_unpack_clear:c}
 %    \begin{macrocode}
 \__kernel_patch_deprecation:nnNNpn { 2021-01-01 } { \hbox_unpack_drop:N }
-\cs_new_protected:Npn \hbox_unpack_clear:N
+\cs_gset_protected:Npn \hbox_unpack_clear:N
   { \hbox_unpack_drop:N }
 \cs_generate_variant:Nn \hbox_unpack_clear:N { c }
 %    \end{macrocode}
@@ -570,7 +612,7 @@
 % \begin{macro}[deprecated = 2021-07-01]{\vbox_unpack_clear:N, \vbox_unpack_clear:c}
 %    \begin{macrocode}
 \__kernel_patch_deprecation:nnNNpn { 2021-01-01 } { \vbox_unpack_drop:N }
-\cs_new_protected:Npn \vbox_unpack_clear:N
+\cs_gset_protected:Npn \vbox_unpack_clear:N
   { \vbox_unpack_drop:N }
 \cs_generate_variant:Nn \vbox_unpack_clear:N { c }
 %    \end{macrocode}
@@ -624,7 +666,7 @@
 %    \begin{macrocode}
 \__kernel_patch_deprecation:nnNNpn
   { 2019-01-01 } { \seq_put_right:Nn \l_file_search_path_seq }
-\cs_new_protected:Npn \file_path_include:n #1
+\cs_gset_protected:Npn \file_path_include:n #1
   {
     \__kernel_file_name_sanitize:nN {#1} \l_@@_full_name_str
     \seq_if_in:NVF \l_file_search_path_seq \l_@@_full_name_str
@@ -632,7 +674,7 @@
   }
 \__kernel_patch_deprecation:nnNNpn
   { 2019-01-01 } { \seq_remove_all:Nn \l_file_search_path_seq }
-\cs_new_protected:Npn \file_path_remove:n #1
+\cs_gset_protected:Npn \file_path_remove:n #1
   {
     \__kernel_file_name_sanitize:nN {#1} \l_@@_full_name_str
     \seq_remove_all:NV \l_file_search_path_seq \l_@@_full_name_str
@@ -643,7 +685,7 @@
 % \begin{macro}[deprecated = 2019-07-01]{\file_add_path:nN}
 %    \begin{macrocode}
 \__kernel_patch_deprecation:nnNNpn { 2019-01-01 } { \file_get_full_name:nN }
-\cs_new_protected:Npn \file_add_path:nN #1#2
+\cs_gset_protected:Npn \file_add_path:nN #1#2
   {
     \file_get_full_name:nN {#1} #2
     \str_if_empty:NT #2
@@ -655,7 +697,7 @@
 % \begin{macro}[deprecated = 2019-07-01]{\file_list:}
 %    \begin{macrocode}
 \__kernel_patch_deprecation:nnNNpn { 2019-01-01 } { \file_log_list: }
-\cs_new_protected:Npn \file_list:          { \file_log_list: }
+\cs_gset_protected:Npn \file_list:          { \file_log_list: }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -664,13 +706,13 @@
 %   These got a more consistent naming.
 %    \begin{macrocode}
 \__kernel_patch_deprecation:nnNNpn { 2019-01-01 } { \ior_show_list: }
-\cs_new_protected:Npn \ior_list_streams:   { \ior_show_list: }
+\cs_gset_protected:Npn \ior_list_streams:   { \ior_show_list: }
 \__kernel_patch_deprecation:nnNNpn { 2019-01-01 } { \ior_log_list: }
-\cs_new_protected:Npn \ior_log_streams:    { \ior_log_list: }
+\cs_gset_protected:Npn \ior_log_streams:    { \ior_log_list: }
 \__kernel_patch_deprecation:nnNNpn { 2019-01-01 } { \iow_show_list: }
-\cs_new_protected:Npn \iow_list_streams:   { \iow_show_list: }
+\cs_gset_protected:Npn \iow_list_streams:   { \iow_show_list: }
 \__kernel_patch_deprecation:nnNNpn { 2019-01-01 } { \iow_log_list: }
-\cs_new_protected:Npn \iow_log_streams:    { \iow_log_list: }
+\cs_gset_protected:Npn \iow_log_streams:    { \iow_log_list: }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -684,6 +726,7 @@
 %   In order to toggle definitions on and off locally we declare an
 %   internal constant integer and copy it into \cs{c_minus_one}.
 %    \begin{macrocode}
+\cs_undefine:N \c_@@_minus_one
 \int_const:Nn \c_@@_minus_one { -1 }
 \__kernel_deprecation_code:nn
   {
@@ -695,7 +738,7 @@
     \cs_set_eq:NN \c_minus_one \c_@@_minus_one
   }
 \@@_not_yet_deprecated:nTF { 2019-01-01 }
-  { \cs_new_eq:NN \c_minus_one \c_@@_minus_one }
+  { \cs_gset_eq:NN \c_minus_one \c_@@_minus_one }
   {
     \cs_gset_nopar:Npn \c_minus_one
       {
@@ -728,7 +771,7 @@
 %   \cs{@@_constdef:Nw}, with an \cs{exp_not:N} construction because the
 %   constants themselves are outer at that point.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_deprecated_constants:nn #1#2
+\cs_gset_protected:Npn \@@_deprecated_constants:nn #1#2
   {
     #1 \c_zero                   {   0 } #2
     #1 \c_one                    {   1 } #2
@@ -754,6 +797,7 @@
     #1 \c_one_thousand         {  1000 } #2
     #1 \c_ten_thousand         { 10000 } #2
   }
+\@@_deprecated_constants:nn { \use_i_ii:nnn \cs_undefine:N } { }
 \@@_deprecated_constants:nn { \int_const:Nn } { }
 \__kernel_deprecation_code:nn
   {
@@ -776,7 +820,7 @@
 % \begin{macro}[deprecated = 2020-07-01]{\@@_value:w}
 %   Made public.
 %    \begin{macrocode}
-\cs_new_eq:NN \@@_value:w \int_value:w
+\cs_gset_eq:NN \@@_value:w \int_value:w
 %    \end{macrocode}
 % \end{macro}
 %
@@ -790,11 +834,11 @@
 % \begin{macro}[deprecated = 2020-07-01]{\lua_shipout_x:n}
 %    \begin{macrocode}
 \__kernel_patch_deprecation:nnNNpn { 2020-01-01 } { \lua_now:e }
-\cs_new:Npn \lua_now_x:n #1 { \@@_now:n {#1} }
+\cs_gset:Npn \lua_now_x:n #1 { \@@_now:n {#1} }
 \__kernel_patch_deprecation:nnNNpn { 2020-01-01 } { \lua_escape:e }
-\cs_new:Npn \lua_escape_x:n #1 { \@@_escape:n {#1} }
+\cs_gset:Npn \lua_escape_x:n #1 { \@@_escape:n {#1} }
 \__kernel_patch_deprecation:nnNNpn { 2020-01-01 } { \lua_shipout_e:n }
-\cs_new_protected:Npn \lua_shipout_x:n #1 { \@@_shipout:n {#1} }
+\cs_gset_protected:Npn \lua_shipout_x:n #1 { \@@_shipout:n {#1} }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -808,14 +852,14 @@
 % \begin{macro}[deprecated = 2020-07-01]{\msg_log:n, \msg_term:n}
 %    \begin{macrocode}
 \__kernel_patch_deprecation:nnNNpn { 2020-01-01 } { \iow_log:n }
-\cs_new_protected:Npn \msg_log:n #1
+\cs_gset_protected:Npn \msg_log:n #1
   {
     \iow_log:n { ................................................. }
     \iow_wrap:nnnN { . ~ #1} { . ~ } { } \iow_log:n
     \iow_log:n { ................................................. }
   }
 \__kernel_patch_deprecation:nnNNpn { 2020-01-01 } { \iow_term:n }
-\cs_new_protected:Npn \msg_term:n #1
+\cs_gset_protected:Npn \msg_term:n #1
   {
     \iow_term:n { ************************************************* }
     \iow_wrap:nnnN { * ~ #1} { * ~ } { } \iow_term:n
@@ -827,7 +871,7 @@
 % \begin{macro}[deprecated = 2020-07-01]{\msg_interrupt:nnn}
 %    \begin{macrocode}
 \__kernel_patch_deprecation:nnNNpn { 2020-01-01 } { [Defined~error~message] }
-\cs_new_protected:Npn \msg_interrupt:nnn #1#2#3
+\cs_gset_protected:Npn \msg_interrupt:nnn #1#2#3
   {
     \tl_if_empty:nTF {#3}
       {
@@ -839,12 +883,12 @@
           {#1 \\\\ #2 \\\\ \c_@@_help_text_tl }
       }
   }
-\cs_new_protected:Npn \@@_old_interrupt_wrap:nn #1#2
+\cs_gset_protected:Npn \@@_old_interrupt_wrap:nn #1#2
   {
     \iow_wrap:nnnN {#1} { | ~ } { } \@@_old_interrupt_more_text:n
     \iow_wrap:nnnN {#2} { ! ~ } { } \@@_old_interrupt_text:n
   }
-\cs_new_protected:Npn \@@_old_interrupt_more_text:n #1
+\cs_gset_protected:Npn \@@_old_interrupt_more_text:n #1
   {
     \exp_args:Nx \tex_errhelp:D
       {
@@ -861,7 +905,7 @@
 \tex_lowercase:D
   {
     \group_end:
-    \cs_new_protected:Npn \@@_old_interrupt_text:n #1
+    \cs_gset_protected:Npn \@@_old_interrupt_text:n #1
       {
         \iow_term:x
           {
@@ -925,16 +969,16 @@
 %   definition has not yet been restored.
 %    \begin{macrocode}
 \__kernel_patch_deprecation:nnNNpn { 2020-01-01 } { \prg_break_point:Nn }
-\cs_new:Npn \@@_break_point:Nn { \prg_break_point:Nn }
+\cs_gset:Npn \@@_break_point:Nn { \prg_break_point:Nn }
 \__kernel_patch_deprecation:nnNNpn { 2020-01-01 } { \prg_break_point: }
-\cs_new:Npn \@@_break_point: { \prg_break_point: }
+\cs_gset:Npn \@@_break_point: { \prg_break_point: }
 \__kernel_patch_deprecation:nnNNpn { 2020-01-01 } { \prg_map_break:Nn }
-\cs_new:Npn \@@_map_break:Nn #1 \@@_break_point:Nn
+\cs_gset:Npn \@@_map_break:Nn #1 \@@_break_point:Nn
   { \prg_map_break:Nn #1 \prg_break_point:Nn }
 \__kernel_patch_deprecation:nnNNpn { 2020-01-01 } { \prg_break: }
-\cs_new:Npn \@@_break: #1 \@@_break_point: { }
+\cs_gset:Npn \@@_break: #1 \@@_break_point: { }
 \__kernel_patch_deprecation:nnNNpn { 2020-01-01 } { \prg_break:n }
-\cs_new:Npn \@@_break:n #1#2 \@@_break_point: {#1}
+\cs_gset:Npn \@@_break:n #1#2 \@@_break_point: {#1}
 %    \end{macrocode}
 % \end{macro}
 %
@@ -943,9 +987,9 @@
 % \begin{macro}[deprecated = 2019-07-01]{\sort_ordered:, \sort_reversed:}
 %    \begin{macrocode}
 \__kernel_patch_deprecation:nnNNpn { 2019-01-01 } { \sort_return_same: }
-\cs_new_protected:Npn \sort_ordered: { \sort_return_same: }
+\cs_gset_protected:Npn \sort_ordered: { \sort_return_same: }
 \__kernel_patch_deprecation:nnNNpn { 2019-01-01 } { \sort_return_swapped: }
-\cs_new_protected:Npn \sort_reversed: { \sort_return_swapped: }
+\cs_gset_protected:Npn \sort_reversed: { \sort_return_swapped: }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -955,21 +999,21 @@
 % \begin{macro}[EXP, deprecated = 2020-07-01, pTF]{\str_if_eq_x:nn}
 %    \begin{macrocode}
 \__kernel_patch_deprecation:nnNNpn { 2020-01-01 } { \str_case_e:nn }
-\cs_new:Npn \str_case_x:nn { \str_case_e:nn }
+\cs_gset:Npn \str_case_x:nn { \str_case_e:nn }
 \__kernel_patch_deprecation:nnNNpn { 2020-01-01 } { \str_case_e:nnT }
-\cs_new:Npn \str_case_x:nnT { \str_case_e:nnT }
+\cs_gset:Npn \str_case_x:nnT { \str_case_e:nnT }
 \__kernel_patch_deprecation:nnNNpn { 2020-01-01 } { \str_case_e:nnF }
-\cs_new:Npn \str_case_x:nnF { \str_case_e:nnF }
+\cs_gset:Npn \str_case_x:nnF { \str_case_e:nnF }
 \__kernel_patch_deprecation:nnNNpn { 2020-01-01 } { \str_case_e:nnTF }
-\cs_new:Npn \str_case_x:nnTF { \str_case_e:nnTF }
+\cs_gset:Npn \str_case_x:nnTF { \str_case_e:nnTF }
 \__kernel_patch_deprecation:nnNNpn { 2020-01-01 } { \str_if_eq_p:ee }
-\cs_new:Npn \str_if_eq_x_p:nn { \str_if_eq_p:ee }
+\cs_gset:Npn \str_if_eq_x_p:nn { \str_if_eq_p:ee }
 \__kernel_patch_deprecation:nnNNpn { 2020-01-01 } { \str_if_eq:eeT }
-\cs_new:Npn \str_if_eq_x:nnT { \str_if_eq:eeT }
+\cs_gset:Npn \str_if_eq_x:nnT { \str_if_eq:eeT }
 \__kernel_patch_deprecation:nnNNpn { 2020-01-01 } { \str_if_eq:eeF }
-\cs_new:Npn \str_if_eq_x:nnF { \str_if_eq:eeF }
+\cs_gset:Npn \str_if_eq_x:nnF { \str_if_eq:eeF }
 \__kernel_patch_deprecation:nnNNpn { 2020-01-01 } { \str_if_eq:eeTF }
-\cs_new:Npn \str_if_eq_x:nnTF { \str_if_eq:eeTF }
+\cs_gset:Npn \str_if_eq_x:nnTF { \str_if_eq:eeTF }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -989,11 +1033,11 @@
 %   }
 %    \begin{macrocode}
 \__kernel_patch_deprecation:nnNNpn { 2021-01-01 } { \file_get:nnN }
-\cs_new_protected:Npn \tl_set_from_file:Nnn #1#2#3
+\cs_gset_protected:Npn \tl_set_from_file:Nnn #1#2#3
   { \file_get:nnN {#3} {#2} #1 }
 \cs_generate_variant:Nn \tl_set_from_file:Nnn { c }
 \__kernel_patch_deprecation:nnNNpn { 2021-01-01 } { \file_get:nnN }
-\cs_new_protected:Npn \tl_gset_from_file:Nnn #1#2#3
+\cs_gset_protected:Npn \tl_gset_from_file:Nnn #1#2#3
   {
     \group_begin:
       \file_get:nnN {#3} {#2} \l_@@_internal_a_tl
@@ -1002,7 +1046,7 @@
   }
 \cs_generate_variant:Nn \tl_gset_from_file:Nnn { c }
 \__kernel_patch_deprecation:nnNNpn { 2021-01-01 } { \file_get:nnN }
-\cs_new_protected:Npn \tl_set_from_file_x:Nnn #1#2#3
+\cs_gset_protected:Npn \tl_set_from_file_x:Nnn #1#2#3
   {
     \group_begin:
       \file_get:nnN {#3} {#2} \l_@@_internal_a_tl
@@ -1013,7 +1057,7 @@
   }
 \cs_generate_variant:Nn \tl_set_from_file_x:Nnn { c }
 \__kernel_patch_deprecation:nnNNpn { 2021-01-01 } { \file_get:nnN }
-\cs_new_protected:Npn \tl_gset_from_file_x:Nnn #1#2#3
+\cs_gset_protected:Npn \tl_gset_from_file_x:Nnn #1#2#3
   {
     \group_begin:
       \file_get:nnN {#3} {#2} \l_@@_internal_a_tl
@@ -1032,9 +1076,9 @@
 %   Simple renames.
 %    \begin{macrocode}
 \__kernel_patch_deprecation:nnNNpn { 2020-01-01 } { \tl_analysis_show:N }
-\cs_new_protected:Npn \tl_show_analysis:N { \tl_analysis_show:N }
+\cs_gset_protected:Npn \tl_show_analysis:N { \tl_analysis_show:N }
 \__kernel_patch_deprecation:nnNNpn { 2020-01-01 } { \tl_analysis_show:n }
-\cs_new_protected:Npn \tl_show_analysis:n { \tl_analysis_show:n }
+\cs_gset_protected:Npn \tl_show_analysis:n { \tl_analysis_show:n }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -1043,7 +1087,7 @@
 % \begin{macro}[deprecated = 2019-07-01]{\token_new:Nn}
 %    \begin{macrocode}
 \__kernel_patch_deprecation:nnNNpn { 2019-01-01 } { \cs_new_eq:NN }
-\cs_new_protected:Npn \token_new:Nn #1#2 { \cs_new_eq:NN #1 #2 }
+\cs_gset_protected:Npn \token_new:Nn #1#2 { \cs_new_eq:NN #1 #2 }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -1055,13 +1099,17 @@
 %   }
 %    \begin{macrocode}
 \__kernel_patch_deprecation:nnNNpn { 2021-01-01 } { \cs_prefix_spec:N }
-\cs_new:Npn \token_get_prefix_spec:N { \cs_prefix_spec:N }
+\cs_gset:Npn \token_get_prefix_spec:N { \cs_prefix_spec:N }
 \__kernel_patch_deprecation:nnNNpn { 2021-01-01 } { \cs_argument_spec:N }
-\cs_new:Npn \token_get_arg_spec:N { \cs_argument_spec:N }
+\cs_gset:Npn \token_get_arg_spec:N { \cs_argument_spec:N }
 \__kernel_patch_deprecation:nnNNpn { 2021-01-01 } { \cs_replacement_spec:N }
-\cs_new:Npn \token_get_replacement_spec:N { \cs_replacement_spec:N }
+\cs_gset:Npn \token_get_replacement_spec:N { \cs_replacement_spec:N }
 %    \end{macrocode}
 % \end{macro}
+%
+%    \begin{macrocode}
+%</patches>
+%    \end{macrocode}
 %
 %    \begin{macrocode}
 %</initex|package>
