--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -347,7 +347,7 @@
 % \end{function}
 %
 % \begin{function}[added = 2013-07-24, updated = 2015-02-28, EXP, noTF]
-%   {\str_case:nn, \str_case:on, \str_case:nV, \str_case:nv}
+%   {\str_case:nn, \str_case:Vn, \str_case:on, \str_case:nV, \str_case:nv}
 %   \begin{syntax}
 %     \cs{str_case:nnTF} \Arg{test string} \\
 %     ~~|{| \\
@@ -1174,7 +1174,7 @@
 % \end{macro}
 %
 % \begin{macro}[EXP, noTF]
-%   {\str_case:nn, \str_case:on, \str_case:nV, \str_case:nv, \str_case_e:nn}
+%   {\str_case:nn, \str_case:Vn, \str_case:on, \str_case:nV, \str_case:nv, \str_case_e:nn}
 % \begin{macro}[EXP]{\@@_case:nnTF, \@@_case_e:nnTF}
 % \begin{macro}[EXP]
 %   {\@@_case:nw, \@@_case_e:nw, \@@_case_end:nw}
@@ -1203,9 +1203,9 @@
   }
 \cs_new:Npn \@@_case:nnTF #1#2#3#4
   { \@@_case:nw {#1} #2 {#1} { } \q_mark {#3} \q_mark {#4} \q_stop }
-\cs_generate_variant:Nn \str_case:nn   { o , nV , nv }
+\cs_generate_variant:Nn \str_case:nn   { V , o , nV , nv }
 \prg_generate_conditional_variant:Nnn \str_case:nn
-  { o , nV , nv } { T , F , TF }
+  { V , o , nV , nv } { T , F , TF }
 \cs_new:Npn \@@_case:nw #1#2#3
   {
     \str_if_eq:nnTF {#1} {#2}
