--- a/l3backend/l3backend-pdf.dtx
+++ b/l3backend/l3backend-pdf.dtx
@@ -1697,7 +1697,7 @@
   {
     \int_gincr:N \g_@@_backend_object_int
     \int_const:cn
-      { g_@@_backend_object_ \tl_to_str:n {#1} _int }
+      { c_@@_backend_object_ \tl_to_str:n {#1} _int }
       { \g_@@_backend_object_int }
     \prop_gput:Nnn \g_@@_backend_object_prop {#1} {#2}
   }
